--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,5 +4,5 @@
     <item android:id="@+id/configuracoes"
         android:title="Configurações"
         android:orderInCategory="100"
-        app:showAsAction="always"/>
+        app:showAsAction="never"/>
 </menu>
